# uibk-mccompiler

./: Dockerfile  README.MD  buildDocker.sh  doxygen.config  meson.build  startDocker.sh
app/: mc_asm.cpp  mc_ast_to_dot.cpp  mc_cfg_to_dot.cpp  mc_ir.cpp  mc_symbol_table.cpp  mc_type_check_trace.cpp  mcc.cpp
app/include/: ArgumentParser.hpp  MCCCommon.hpp  StringUtils.hpp
data/: compileAndRun.sh  stdmclib.c
docs/: specification.md
docs/cpp_basics/: README.MD
docs/doc/html/: annotated.html  classes.html  dir_0885a5aeed6759b14e3f8aedc89cdb5d.html  dir_0a27f4908b7f1e680249e00918ab2252.html  dir_0ff8f86e16b5e28e3f48682cfcb64fe3.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_150b07b7190818eb9b6a6410cdf1d88f.html  dir_15fdd5fecec3dea9dfdb11e9aafa18cd.html  dir_203e5988f1ed315d29383d699972de6f.html  dir_29ef86b5bf04e52a4e8dcd3589e6a0c3.html  dir_30e9df94bb56835e883b0807668e6729.html  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_35e986a6bbf6c87255b35492e40fd751.html  dir_3a31d8b44698f4e8b8f24d7d9bf81704.html  dir_3c7a8fa51fa96bb21a1073077045fd98.html  dir_3e6c6af549ea038c962d140cc1051955.html  dir_3ff90d3cb5fc00a3d14ed9f6e146e4c3.html  dir_4269756df0eca2bb645abeb32320db2f.html  dir_47253944bf2d10c5220bf2277d476094.html  dir_472fafaf0f039b9e6b043966c1ef7dbf.html  dir_48462b9c0215f19d6105d512629023d5.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_4a7d2dcd6dbb27fdff9d30729f1a8917.html  dir_51286b5d5a244263c465f891032c310c.html  dir_52056f22cca171874057c8b23c2d4176.html  dir_5797b9597a67b3aa8df487b3a29f3561.html  dir_5e621a625699bb70e4bb314891da0296.html  dir_5fb09e1ea670d197779c1760fa4416a8.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_692f292188a6fd86c3360f5e7969042e.html  dir_6a07fdbc4b50e86806a88566ca8f66e4.html  dir_78f5ecd95a37a67589a284a718a0be9c.html  dir_80c3527ec3cf0f3483e12c0fcf6ceee3.html  dir_821002d4f10779a80d4fb17bc32f21f1.html  dir_94e7c3ca0926c623a666cd7046cd809e.html  dir_967e0eafb5c81fc1bad6831a01c17665.html  dir_99d2dc560f84dde124e930de108007a7.html  dir_9ff55e457ec8ccca7ee863f3b5c83b61.html  dir_a32d1b5c375f6f3151aeffde60259ac1.html  dir_a8396a007edbfafe509c0c5d6baf917c.html  (+257 more)
docs/parsing_basics/: Overview.md  Tutorial.md
include/mcc/: Exceptions.hpp  mcc.hpp
scripts/: convertDotToPNG.sh  integration_tests.sh  run_IntegrationTests.sh
src/: SemanticChecks.cpp  mcc.cpp  parser.yy  scanner.l
src/ASM/: ASMGenerator.cpp
src/ICR/: ICRepresentation.cpp  OPQuadruple.cpp  Quadruple.cpp
src/SymbolTable/: FunctionTable.cpp  SymbolTable.cpp
src/ast/: ArgumentsAST.cpp  ArrayIdentifierAST.cpp  AssignmentStmtAST.cpp  BinaryOpAST.cpp  BoolLiteralAST.cpp  CallExprAST.cpp  CompoundStmtAST.cpp  DeclarationStmtAST.cpp  ExpressionAST.cpp  ExpressionStmtAST.cpp  FloatLiteralAST.cpp  FunctionAST.cpp  IdentifierAST.cpp  IfStmtAST.cpp  IntLiteralAST.cpp  LiteralAST.cpp  ParametersAST.cpp  ProgramAST.cpp  ReturnStmtAST.cpp  StmtAST.cpp  StmtListAST.cpp  StringLiteralAST.cpp  UnaryOpAST.cpp  WhileStmtAST.cpp  ast.cpp
src/include/: SemanticChecks.hpp  astAll.hpp  mcScanner.hpp
src/include/ASM/: ASMDefines.hpp  ASMGenerator.hpp
src/include/ICR/: ICRepresentation.hpp  OPQuadruple.hpp  Quadruple.hpp
src/include/SymbolTable/: FunctionTable.hpp  Symbol.hpp  SymbolTable.hpp
src/include/ast/: AST.hpp  ArgumentsAST.hpp  ArrayIdentifierAST.hpp  AssignmentStmtAST.hpp  BinaryOpAST.hpp  BoolLiteralAST.hpp  CallExprAST.hpp  CompoundStmtAST.hpp  DeclarationStmtAST.hpp  ExpressionAST.hpp  ExpressionStmtAST.hpp  FloatLiteralAST.hpp  FunctionAST.hpp  IdentifierAST.hpp  IfStmtAST.hpp  IntLiteralAST.hpp  LiteralAST.hpp  ParametersAST.hpp  ProgramAST.hpp  ReturnStmtAST.hpp  StmtAST.hpp  (+4 more)
src/utils/: ArgumentParser.cpp  DOTTree.cpp
test/unit/: AssemblyTest.cpp  IRTest.cpp  MccTest.cpp  SemanticTest.cpp
(+2636 files in other folders)
